force-app/main/default/objects/Order_Item_Extension__c/Order_Item_Extension__c.object-meta.xml
<CustomObject>
    <description>FY25SR-319 To capture credit calculation data</description>
    <label>OrderItem Extension</label>
    <nameField>
        <label>OrderItem Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderItem Extension</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>