force-app/main/default/objects/Order_Item_Extension__c/fields/Credit_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Calculation_Status__c</fullName>
    <description>This field stores the current stage of the credit calculation process for the order item. Values for this field are sourced directly from NetSuite. Any change to this field&apos;s value will automatically trigger the credit calculation process for the associated order item. JIRA Story: FY25SR-319 and FY25SR-1144</description>
    <inlineHelpText>Indicates the current status of the credit calculation. Values are populated from NetSuite. A change in this status triggers the credit calculation.</inlineHelpText>
    <label>Credit Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To process</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>