force-app/main/default/objects/Order_Item_Extension__c/fields/End_of_Paid_Term__c.field-meta.xml
<CustomField>
    <fullName>End_of_Paid_Term__c</fullName>
    <description>This field indicates the specific date until which the customer&apos;s license contract has been financially settled. It represents the end of the period for which payment has been received and processed. JIRA story: FY25SR-1145</description>
    <inlineHelpText>The date up to which the customer has paid for this license contract.</inlineHelpText>
    <label>End of Paid Term</label>
    <type>Date</type>
</CustomField>