force-app/main/default/objects/Order_Item_Extension__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>This field stores the specific reason for a failure in the credit calculation process. It&apos;s used to capture and log any errors encountered during the calculation. (Implemented as part of FY25SR-335.)</description>
    <inlineHelpText>The reason why the credit calculation process failed.</inlineHelpText>
    <label>Failure Reason</label>
    <type>TextArea</type>
</CustomField>