force-app/main/default/objects/Order_Item_Extension__c/fields/Invoice_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Creation_Date__c</fullName>
    <description>This field stores the date on which the invoice was generated and subsequently shared with the customer.</description>
    <inlineHelpText>The date the invoice was generated and shared with the customer.</inlineHelpText>
    <label>Invoice Creation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>