force-app/main/default/objects/Order_Item_Extension__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>This field stores the unique identification number assigned to a specific invoice.</description>
    <inlineHelpText>The unique invoice identification number.</inlineHelpText>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>