force-app/main/default/objects/Order_Item_Extension__c/fields/OI_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>OI_ExternalID__c</fullName>
    <description>This field stores the Order Item Id. It is designated as an external ID to facilitate its unique mapping with NetSuite records.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique Order Item ID used for mapping with NetSuite.</inlineHelpText>
    <label>OI External ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>