force-app/main/default/objects/Order_Item_Extension__c/fields/Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FY25SR-319 Related Order Line</description>
    <label>Order Line ID</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>OrderItem Extension</relationshipLabel>
    <relationshipName>Order_Item_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>