force-app/main/default/objects/Order_Item_Extension__c/fields/Paid_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Paid_Quantity__c</fullName>
    <description>This field shows how much of the total quantity of a license a customer has paid for by the end of their paid term.</description>
    <inlineHelpText>How much of the license quantity is paid for by the end of the paid term.</inlineHelpText>
    <label>Paid Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>