force-app/main/default/objects/Order_Item_Extension__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <description>This field identifies the payment type for the product, whether it follows standard prepayment terms or a non-standard prepayment arrangement.</description>
    <label>Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Prepay</fullName>
            </value>
            <value>
                <fullName>Non-Standard Prepay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>