force-app/main/default/objects/Order_Item_Extension__c/fields/Per_DayQuantity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Per_DayQuantity_Amount__c</fullName>
    <description>This field holds the amount of quantity calculated for each day.</description>
    <inlineHelpText>The amount per quantity per day.</inlineHelpText>
    <label>Per DayQuantity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>