force-app/main/default/objects/Order_Item_Extension__c/fields/Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Type__c</fullName>
    <description>This field tells you if the recorded amount is for a quantity (like number of items) or capacity (like storage space or bandwidth).</description>
    <inlineHelpText>Is this a quantity or a capacity?</inlineHelpText>
    <label>Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>