force-app/main/default/objects/Order_Item_Extension__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    <description>This field shows the remaining balance calculated as the Sale Price minus the Sales Order (SO) Line Paid Amount. (Implemented as part of FY25SR-319.)</description>
    <inlineHelpText>The remaining amount after subtracting the paid amount from the sale price.</inlineHelpText>
    <label>Remaining Amount Per Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>