force-app/main/default/objects/Order_Item_Extension__c/fields/Unbilled__c.field-meta.xml
<CustomField>
    <fullName>Unbilled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tells you if this specific order item extension has been billed to the customer yet.</description>
    <inlineHelpText>hows if this order item extension is billed or not.</inlineHelpText>
    <label>Unbilled</label>
    <type>Checkbox</type>
</CustomField>