force-app/main/default/objects/Order_Item_Extension__c/fields/Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Unpaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field tells you if payment for this specific order item extension is still outstanding.</description>
    <inlineHelpText>Shows if this order item extension has been paid for.</inlineHelpText>
    <label>Unpaid</label>
    <type>Checkbox</type>
</CustomField>