force-app/main/default/objects/Order_Item_Extension__c/validationRules/OrderItem_Extension_Access_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderItem_Extension_Access_Restriction</fullName>
    <active>true</active>
    <description>Order Fulfilment related records are not to edit</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
$User.Alias &lt;&gt; &apos;autoproc&apos;,
NOT(INCLUDES($User.RBAC_Group__c, &apos;API&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT System Admin&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT Prod Ops Support&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;System - IT&apos;)),
ISPICKVAL(Order_Line_ID__r.Order.Order_Status__c, &apos;Shipped&apos;)
)</errorConditionFormula>
    <errorMessage>You aren’t authorized to edit OrderItem Extension, hence please create a support ticket with ProdOps Support or email ProdOpsapps@rubrik.com” with details</errorMessage>
</ValidationRule>